Added services, contact, and porfolio pages and added basic HTML and copy to services page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Olivia Swann | SEO and Digital Marketing</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      Olivia Swann | SEO and Digital Marketing <a href="">Portfolio</a> |
+      <a href="">Services</a> | <a href="">Contact</a>
+    </header>
+    <h1>Olivia Swann</h1>
+    <img src="src/olivia-swann.jpg" class="headshot" alt="olivia-swann" />
+    <p>
+      With comprehensive experience in SEO, copywriting, editing, content
+      strategy, and social media management, I help businesses grow their online
+      presence and drive organic traffic. My skill set spans keyword research,
+      on-page optimization, and crafting compelling, conversion-focused content
+      that ranks well on search engines. Whether managing digital campaigns or
+      refining brand messaging, I focus on strategies that increase visibility
+      and engagement across multiple platforms.
+    </p>
+    <button>Portfolio</button>
+    <button>Services</button>
+    <button>Contact</button>
+  </body>
 </html>
