Started adding some basic CSS and designing the porfolio page

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <header>
-      Olivia Swann | SEO and Digital Marketing <a href="">Portfolio</a> |
-      <a href="">Services</a> | <a href="">Contact</a>
+      <a href="index.html">Olivia Swann</a> | SEO and Digital Marketing
+      <a href="portfolio.html">Portfolio</a> |
+      <a href="services.html">Services</a> |
+      <a href="contact.html">Contact</a>
     </header>
     <h1>Olivia Swann</h1>
     <img src="src/olivia-swann.jpg" class="headshot" alt="olivia-swann" />
