began styling homepage

--- a/index.html
+++ b/index.html
@@ -13,19 +13,28 @@
       <a href="services.html">Services</a> |
       <a href="contact.html">Contact</a>
     </header>
-    <h1>Olivia Swann</h1>
-    <img src="src/olivia-swann.jpg" class="headshot" alt="olivia-swann" />
-    <p>
-      With comprehensive experience in SEO, copywriting, editing, content
-      strategy, and social media management, I help businesses grow their online
-      presence and drive organic traffic. My skill set spans keyword research,
-      on-page optimization, and crafting compelling, conversion-focused content
-      that ranks well on search engines. Whether managing digital campaigns or
-      refining brand messaging, I focus on strategies that increase visibility
-      and engagement across multiple platforms.
-    </p>
-    <button>Portfolio</button>
-    <button>Services</button>
-    <button>Contact</button>
+    <div class="profile-container">
+      <img src="src/olivia-swann.jpg" class="headshot" alt="olivia-swann" />
+      <div class="profile-details">
+        <h1 class="name">Olivia Swann</h1>
+        <div class="about-me">
+          <p>
+            With comprehensive experience in SEO, copywriting, editing, content
+            strategy, and social media management, I help businesses grow their
+            online presence and drive organic traffic. My skill set spans
+            keyword research, on-page optimization, and crafting compelling,
+            conversion-focused content that ranks well on search engines.
+            Whether managing digital campaigns or refining brand messaging, I
+            focus on strategies that increase visibility and engagement across
+            multiple platforms.
+          </p>
+        </div>
+        <div class="buttons">
+          <button>Portfolio</button>
+          <button>Services</button>
+          <button>Contact</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
