styled buttons and fixed format on homepage

--- a/index.html
+++ b/index.html
@@ -47,17 +47,27 @@
             multiple platforms.
           </p>
         </div>
+
         <span class="buttons">
           <span>
-            <a href="portfolio.html" class="portfolio-button">Portfolio</a>
+            <button class="portfolio-button">
+              <a href="portfolio.html" class="portfolio-button-text"
+                >Portfolio</a
+              >
+            </button>
           </span>
           <span>
-            <a href="services.html" class="services-button">Services</a>
+            <button class="services-button">
+              <a href="services.html" class="services-button-text">Services</a>
+            </button>
           </span>
           <span>
-            <a href="contact.html" class="contact-button">Contact</a>
+            <button class="contact-button">
+              <a href="contact.html" class="contact-button-text">Contact</a>
+            </button>
           </span>
         </span>
+      </div>
     </div>
   </body>
 </html>
