Made homepage responsive

--- a/index.html
+++ b/index.html
@@ -65,7 +65,49 @@
     </nav>
 
     <div class="profile-container">
-      <img src="src/olivia-swann.jpg" class="headshot" alt="olivia-swann" />
+      <div class="row align-items-center">
+         <div class="col-md-4 text-center mb-4 mb-md-0"><img src="src/olivia-swann.jpg" class="headshot img-fluid" alt="olivia-swann" /></div>
+
+          <div class="col-md-8 text-center text-md-start"><h1 class="name ">Olivia Swann</h1>
+         <p>
+            With comprehensive experience in SEO, copywriting, editing, content
+            strategy, and social media management, I help businesses grow their
+            online presence and drive organic traffic.
+            <br />
+            <br />
+            My skill set spans keyword research, on-page optimization, and
+            crafting compelling, conversion-focused content that ranks well on
+            search engines.
+            <br />
+            <br />
+            Whether managing digital campaigns or refining brand messaging, I
+            focus on strategies that increase visibility and engagement across
+            multiple platforms.
+          </p>
+          
+        </div>
+
+        <span class="buttons">
+          <span>
+            <button class="portfolio-button">
+              <a href="portfolio.html" class="portfolio-button-text"
+                >Portfolio</a
+              >
+            </button>
+          </span>
+          <span>
+            <button class="services-button">
+              <a href="services.html" class="services-button-text">Services</a>
+            </button>
+          </span>
+          <span>
+            <button class="contact-button">
+              <a href="contact.html" class="contact-button-text">Contact</a>
+            </button>
+          </span>
+        </span></div>
+      </div>
+      <!-- <img src="src/olivia-swann.jpg" class="headshot" alt="olivia-swann" />
       <div class="profile-details">
         <h1 class="name">Olivia Swann</h1>
         <div class="about-me">
@@ -105,7 +147,7 @@
             </button>
           </span>
         </span>
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
