Changed homepage to more responsive design, started adding outlining porfolio page, merged contact and services pages

--- a/index.html
+++ b/index.html
@@ -26,9 +26,155 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg fixed-top" style="background-color: #e0be9a;">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Olivia Swann | SEO and Digital Marketing</a>
+        <a class="navbar-brand" href="index.html">Olivia Swann</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="services.html#contact">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Porfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="services.html">Services</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+  
+    <h1 class="text-center">Olivia Swann</h1>
+    <h2 class="text-center">
+      Front-end developer, Digital Marketing and SEO Specialist
+    </h3>
+       <p class="text-center">
+            With comprehensive experience in SEO, copywriting, editing, content
+            strategy, and social media management, I help businesses grow their
+            online presence and drive organic traffic.
+            <br />
+            <br />
+            My skill set spans keyword research, on-page optimization, and
+            crafting compelling, conversion-focused content that ranks well on
+            search engines.
+            <br />
+            <br />
+            Whether managing digital campaigns or refining brand messaging, I
+            focus on strategies that increase visibility and engagement across
+            multiple platforms.
+          </p>
+    <div class="navigation-links mb-5">
+      <a href="services.html#contact" class="primary-link">Contact me</a>
+      <a href="portfolio.html" class="secondary-link">Portfolio</a>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <img
+            src="src/haiku poem generator picture.png"
+            alt="haiku poem
+          generator"
+            class="img-fluid rounded"
+          />
+        </div>
+
+        <div class="col-md-6">
+          <h2 class="mt-5">Haiku Generator</h2>
+
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="mt-5">
+            <a
+              href="https://quiet-toffee-e1eb9d.netlify.app/"
+              class="primary-link"
+            >
+              Launch Poem Generator</a
+            >
+          </div>
+        </div>
+      </div>
+
+      <div class="row mt-5">
+        <div class="col-md-6">
+          <h2 class="mb-3">Weather App</h2>
+
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="mb-5 mt-5">
+            <a
+              href="https://coding-project-weather-app.netlify.app/"
+              class="primary-link"
+              >Launch Weather App</a
+            >
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img
+            src="src/weather app picture.png"
+            alt="weather app project"
+            class="img-fluid rounded"
+          />
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-md-6">
+          <img
+            src="src/world clock project picture.png"
+            alt="world clock project"
+            class="img-fluid rounded"
+          />
+        </div>
+
+        <div class="col-md-6">
+          <h2>World Clock</h2>
+
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+
+          <div class="mt-5">
+            <a
+              href="https://ors-world-clock-proj.netlify.app/"
+              class="primary-link"
+              >Launch Clock App</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- <nav class="navbar navbar-expand-lg" style="background-color: #e0be9a">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">Olivia Swann</a>
         <button
           class="navbar-toggler"
           type="button" 
@@ -106,48 +252,8 @@
             </button>
           </span>
         </span></div>
-      </div>
-      <!-- <img src="src/olivia-swann.jpg" class="headshot" alt="olivia-swann" />
-      <div class="profile-details">
-        <h1 class="name">Olivia Swann</h1>
-        <div class="about-me">
-          <p>
-            With comprehensive experience in SEO, copywriting, editing, content
-            strategy, and social media management, I help businesses grow their
-            online presence and drive organic traffic.
-            <br />
-            <br />
-            My skill set spans keyword research, on-page optimization, and
-            crafting compelling, conversion-focused content that ranks well on
-            search engines.
-            <br />
-            <br />
-            Whether managing digital campaigns or refining brand messaging, I
-            focus on strategies that increase visibility and engagement across
-            multiple platforms.
-          </p>
-        </div>
-
-        <span class="buttons">
-          <span>
-            <button class="portfolio-button">
-              <a href="portfolio.html" class="portfolio-button-text"
-                >Portfolio</a
-              >
-            </button>
-          </span>
-          <span>
-            <button class="services-button">
-              <a href="services.html" class="services-button-text">Services</a>
-            </button>
-          </span>
-          <span>
-            <button class="contact-button">
-              <a href="contact.html" class="contact-button-text">Contact</a>
-            </button>
-          </span>
-        </span>
       </div> -->
+   
     </div>
   </body>
 </html>
