--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css" />
-        <link
+    <link
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
@@ -22,72 +22,142 @@
     ></script>
   </head>
   <body>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav
+      class="navbar navbar-expand-lg fixed-top"
+      style="background-color: #e0be9a"
+    >
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Olivia Swann | SEO and Digital Marketing</a>
+        <a class="navbar-brand" href="index.html">Olivia Swann</a>
         <button
           class="navbar-toggler"
-          type="button" 
-          style="width: 10%; height: 10%;"
+          type="button"
           data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="services.html"
-                >Services</a
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="services.html#contact">Contact</a>
             </li>
-              <li class="nav-item">
-              <a class="nav-link" href="portfolio.html">Portfolio</a>
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Writing Porfolio</a>
             </li>
-              </ul>
+            <li class="nav-item">
+              <a class="nav-link" href="services.html">Services</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <h1>Portfolio</h1>
-    <h2>Blogs</h2>
-    <img
-      class="blog-image"
-      src="src/Eeastern-Band-of-Cherokee-Flag.webp"
-      alt="Eeastern-Band-of-Cherokee-Flag"
-    />
-    <a
-      class="blog-title"
-      href="https://leafwell.com/blog/celebrating-indigenous-peoples-day"
-      >Celebrating Indigenous People's Day: Tribal Nations are Trailblazers in
-      Cannabis Legalization</a
-    >
-    <img
-      class="blog-image"
-      src="src/Two-spirit-and-Female-Indigenous-Leaders.webp"
-      alt="indigenous-two-spirit-and-female-cannabis-leaders"
-    />
-    <a
-      class="blog-title"
-      href="https://leafwell.com/blog/indigenous-two-spirit-and-female-cannabis-leaders"
-      >Indigenous Two-Spirit and Female Cannabis Activists, Entrepreneurs, and
-      Leaders To Follow</a
-    >
-    <img class="blog-image" src="src/Billy-Anthony.webp" alt="Billy-Anthony" />
-    <a
-      class="blog-title"
-      href="https://leafwell.com/blog/elevate-your-cannabis-conference-experience-insiders-survival-guide"
-      >Elevate Your Cannabis Conference Experience: Insider’s Survival Guide</a
-    >
+    <!-- Front End Portfolio -->
+    <h1 class="m-5 pt-5 text-center">Front End Portfolio</h1>
+    <div class="container d-block">
+      <div class="row d-flex flex-wrap">
+        <div class="col-sm-4 d-flex">
+          <img
+            src="src/haiku poem generator picture.png"
+            class="img-fluid p-2 shadow rounded"
+          />
+        </div>
+        <div class="col-sm-4 d-flex">
+          <img
+            src="src/weather app picture.png"
+            class="img-fluid p-2 shadow rounded"
+          />
+        </div>
+        <div class="col-sm-4 d-flex">
+          <img
+            src="src/world clock project picture.png"
+            class="img-fluid p-2 shadow rounded"
+          />
+        </div>
+      </div>
+    </div>
+    <div class="navigation-links mb-5">
+      <a href="https://github.com/xorsx" class="primary-link">Github</a>
+      <a href="services.html" class="secondary-link">Services</a>
+    </div>
+
+    <!-- Copywriting and Blogs Porfolio -->
+
+    <h2 class="text-center">Blogs</h2>
+    <div class="container d-block">
+      <div class="row d-flex flex-wrap">
+        <div class="col-sm-4 d-flex">
+          <img
+            src="src/Two-spirit-and-Female-Indigenous-Leaders.webp"
+            class="img-fluid p-2 shadow rounded"
+          />
+        </div>
+        <div class="col-sm-4 d-flex">
+          <img
+            src="src/Eeastern-Band-of-Cherokee-Flag.webp"
+            class="img-fluid p-2 shadow rounded"
+          />
+        </div>
+        <div class="col-sm-4 d-flex">
+          <img
+            src="src/Billy-Anthony.webp"
+            class="img-fluid p-2 shadow rounded"
+          />
+        </div>
+      </div>
+    </div>
+    <div class="navigation-links mb-5 blog-links">
+      <a href="https://github.com/xorsx" class="primary-link"
+        >Indigenous Two-Spirit and Female Activists</a
+      >
+      <a href="services.html" class="secondary-link"
+        >Celebrating Indigenous People's Day</a
+      >
+      <a href="https://github.com/xorsx" class="primary-link"
+        >Conference Experience: Insider’s Survival Guide</a
+      >
+    </div>
+
+    <div id="carouselExampleFade" class="carousel slide carousel-fade">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="src/ad copy 2.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="src/ad copy 3.jpg" class="d-block mw-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="src/ad copy 4.jpg" class="d-block mw-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="src/ad copy 5.jpg" class="d-block mw-100" alt="..." />
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleFade"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleFade"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
   </body>
 </html>
