--- a/services.html
+++ b/services.html
@@ -22,38 +22,35 @@
     ></script>
   </head>
   <body>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+       <nav class="navbar navbar-expand-lg fixed-top" style="background-color: #e0be9a;">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Olivia Swann | SEO and Digital Marketing</a>
+        <a class="navbar-brand" href="index.html">Olivia Swann</a>
         <button
           class="navbar-toggler"
-          type="button" 
-          style="width: 10%; height: 10%;"
+          type="button"
           data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="services.html"
-                >Services</a
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="services.html#contact">Contact</a>
             </li>
-              <li class="nav-item">
-              <a class="nav-link" href="portfolio.html">Portfolio</a>
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Writing Porfolio</a>
             </li>
-              </ul>
+            <li class="nav-item">
+              <a class="nav-link" href="services.html">Services</a>
             </li>
           </ul>
         </div>
@@ -108,5 +105,52 @@
       <li>Community management & engagement</li>
       <li>Preformance tracking & reporting</li>
     </ul>
+<div id="contact">
+     <h2>Contact</h2>
+      <p>
+     Feel free to reach out for pricing information. I offer free SEO and social media audits and customized packages designed to
+        meet your specific requirements and budget. I look forward to hearing
+        from you and helping your business grow!
+
+        <br />
+        <br />
+       <strong>Are you a non-profit?</strong> I offer pro bono work to non-profits and community organizers on a
+        case-by-case basis. 
+      </p>
+      <p>
+        Email
+        <br />
+        oliviarswann@gmail.com
+      </p>
+      <form action="">
+        <label for="first-name">First Name</label>
+        <input
+          name="first-name"
+          type="text"
+          maxlength="100"
+          autocomplete="off"
+        />
+        <label for="last-name">Last Name</label>
+        <input
+          name="last-name"
+          type="text"
+          maxlength="100"
+          autocomplete="off"
+        />
+        <label for="email">Email</label>
+        <input name="email" type="text" maxlength="100" autocomplete="off" />
+        <label for="subject">Subject</label>
+        <input name="subject" type="text" maxlength="100" autocomplete="off" />
+        <label for="message">Message</label>
+        <input
+          name="message"
+          type="textarea"
+          maxlength="100"
+          autocomplete="off"
+        />
+        <button>Submit</button>
+      </form>
+    </main>
+    </div>
   </body>
 </html>
