--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
               <a class="nav-link" href="services.html#contact">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="portfolio.html">Writing Porfolio</a>
+              <a class="nav-link" href="portfolio.html">Porfolio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="services.html">Services</a>
