--- a/services.html
+++ b/services.html
@@ -47,7 +47,7 @@
               <a class="nav-link" href="services.html#contact">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="portfolio.html">Writing Porfolio</a>
+              <a class="nav-link" href="portfolio.html">Porfolio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="services.html">Services</a>
@@ -63,7 +63,7 @@
       presence and help your business grow. With expertise in SEO and content
       strategy, I provide tailored solutions to meet your unique needs.
     </p>
-    <h2>SEO Audits & Strategy</h2>
+    <h2>SEO Services</h2>
 
     <p>
       I specialize in comprehensive SEO audits that uncover opportunities to
