Added image to homepage, reformatted portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,10 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div
+          class="collapse navbar-collapse justify-content-center"
+          id="navbarNav"
+        >
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html"
@@ -59,27 +62,122 @@
         </div>
       </div>
     </nav>
-    <!-- Front End Portfolio -->
-    <h1 class="m-5 pt-5 text-center">Front End Portfolio</h1>
-    <div class="container d-block">
-      <div class="row d-flex flex-wrap">
-        <div class="col-sm-4 d-flex">
+    <!-- Portfolio -->
+
+    <h1 class="mt-5 pt-5 text-center">Porfolio</h1>
+    <!-- TOC -->
+
+    <table class="table table-of-contents">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col"></th>
+          <th scope="col"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">‣</th>
+          <td>
+            <a href="portfolio.html#front-end-projects"
+              >Front-End Development Projects</a
+            >
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">‣</th>
+          <td>
+            <a href="portfolio.html#blogs"
+              >Copy for Websites, Blogs, and More</a
+            >
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">‣</th>
+          <td>Paid Ad Campaign Copy</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <table class="table">
+      <thead class="thead-light"></thead>
+
+      <tbody></tbody>
+    </table>
+
+    <h2 id="front end projects" class="text-center pb-3">Front End Projects</h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
           <img
             src="src/haiku poem generator picture.png"
-            class="img-fluid p-2 shadow rounded"
+            alt="haiku poem
+          generator"
+            class="img-fluid rounded"
           />
         </div>
-        <div class="col-sm-4 d-flex">
+
+        <div class="col-md-6">
+          <h2 class="mt-5">Haiku Generator</h2>
+
+          <p>
+            Poem generator app using AI API, Javascript, HTML, and CSS to
+            generate a poem based on user input.
+          </p>
+          <div class="mt-5">
+            <a
+              href="https://quiet-toffee-e1eb9d.netlify.app/"
+              class="primary-link"
+            >
+              Launch Poem Generator</a
+            >
+          </div>
+        </div>
+      </div>
+
+      <div class="row mt-5">
+        <div class="col-md-6">
+          <h2 class="mb-3">Weather App</h2>
+
+          <p>
+            Weather app developed using weather API, JavaScript, HTML, and CSS.
+          </p>
+          <div class="mb-5 mt-5">
+            <a
+              href="https://coding-project-weather-app.netlify.app/"
+              class="primary-link"
+              >Launch Weather App</a
+            >
+          </div>
+        </div>
+        <div class="col-md-6">
           <img
             src="src/weather app picture.png"
-            class="img-fluid p-2 shadow rounded"
+            alt="weather app project"
+            class="img-fluid rounded"
           />
         </div>
-        <div class="col-sm-4 d-flex">
+      </div>
+      <div class="row mt-5">
+        <div class="col-md-6">
           <img
             src="src/world clock project picture.png"
-            class="img-fluid p-2 shadow rounded"
+            alt="world clock project"
+            class="img-fluid rounded"
           />
+        </div>
+
+        <div class="col-md-6">
+          <h2>World Clock</h2>
+
+          <p>World clock app developed using HTML, CSS, and JavaScript.</p>
+
+          <div class="mt-5">
+            <a
+              href="https://ors-world-clock-proj.netlify.app/"
+              class="primary-link"
+              >Launch Clock App</a
+            >
+          </div>
         </div>
       </div>
     </div>
@@ -87,77 +185,38 @@
       <a href="https://github.com/xorsx" class="primary-link">Github</a>
       <a href="services.html" class="secondary-link">Services</a>
     </div>
-
     <!-- Copywriting and Blogs Porfolio -->
 
-    <h2 class="text-center">Blogs</h2>
+    <h2 class="text-center m-5 pt-3" id="blogs">Blogs</h2>
     <div class="container d-block">
       <div class="row d-flex flex-wrap">
         <div class="col-sm-4 d-flex">
-          <img
-            src="src/Two-spirit-and-Female-Indigenous-Leaders.webp"
-            class="img-fluid p-2 shadow rounded"
-          />
+          <a
+            href="https://leafwell.com/blog/indigenous-two-spirit-and-female-cannabis-leaders"
+            class="tertiary-link"
+            ><img
+              src="src/Two-spirit-and-Female-Indigenous-Leaders.webp"
+              class="img-fluid p-2 shadow rounded"
+          /></a>
         </div>
         <div class="col-sm-4 d-flex">
-          <img
-            src="src/Eeastern-Band-of-Cherokee-Flag.webp"
-            class="img-fluid p-2 shadow rounded"
-          />
+          <a
+            href="https://leafwell.com/blog/celebrating-indigenous-peoples-day"
+            class="tertiary-link"
+            ><img
+              src="src/Eeastern-Band-of-Cherokee-Flag.webp"
+              class="img-fluid p-2 shadow rounded"
+          /></a>
         </div>
         <div class="col-sm-4 d-flex">
-          <img
-            src="src/Billy-Anthony.webp"
-            class="img-fluid p-2 shadow rounded"
-          />
+          <a href="https://github.com/xorsx" class="tertiary-link">
+            <img
+              src="src/Billy-Anthony.webp"
+              class="img-fluid p-2 shadow rounded"
+          /></a>
         </div>
       </div>
     </div>
-    <div class="navigation-links mb-5 blog-links">
-      <a href="https://github.com/xorsx" class="primary-link"
-        >Indigenous Two-Spirit and Female Activists</a
-      >
-      <a href="services.html" class="secondary-link"
-        >Celebrating Indigenous People's Day</a
-      >
-      <a href="https://github.com/xorsx" class="primary-link"
-        >Conference Experience: Insider’s Survival Guide</a
-      >
-    </div>
-
-    <div id="carouselExampleFade" class="carousel slide carousel-fade">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="src/ad copy 2.jpg" class="d-block w-100" alt="..." />
-        </div>
-        <div class="carousel-item">
-          <img src="src/ad copy 3.jpg" class="d-block mw-100" alt="..." />
-        </div>
-        <div class="carousel-item">
-          <img src="src/ad copy 4.jpg" class="d-block mw-100" alt="..." />
-        </div>
-        <div class="carousel-item">
-          <img src="src/ad copy 5.jpg" class="d-block mw-100" alt="..." />
-        </div>
-      </div>
-      <button
-        class="carousel-control-prev"
-        type="button"
-        data-bs-target="#carouselExampleFade"
-        data-bs-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button
-        class="carousel-control-next"
-        type="button"
-        data-bs-target="#carouselExampleFade"
-        data-bs-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
+    <div class="navigation-links mb-5 blog-links"></div>
   </body>
 </html>
