--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg fixed-top" style="background-color: #e0be9a;">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Olivia Swann</a>
+      <div class="container-fluid ">
+        <a class="navbar-brand " href="index.html">Olivia Swann</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -40,7 +40,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html"
@@ -64,9 +64,22 @@
   
     <h1 class="text-center">Olivia Swann</h1>
     <h2 class="text-center">
-      Front-end developer, Digital Marketing and SEO Specialist
+      
     </h3>
-       <p class="text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <img
+            src="src/olivia-swann.jpg"
+            alt="headshot"
+            class="img-fluid rounded headshot"
+          />
+        </div>
+
+        <div class="col-md-6">
+          <h2 class=" text-center">Front-end developer, digital marketing and SEO specialist</h2>
+
+       <p >
             With comprehensive experience in SEO, copywriting, editing, content
             strategy, and social media management, I help businesses grow their
             online presence and drive organic traffic.
@@ -80,179 +93,38 @@
             Whether managing digital campaigns or refining brand messaging, I
             focus on strategies that increase visibility and engagement across
             multiple platforms.
-          </p>
-    <div class="navigation-links mb-5">
+               <div class="navigation-links mb-5">
       <a href="services.html#contact" class="primary-link">Contact me</a>
       <a href="portfolio.html" class="secondary-link">Portfolio</a>
     </div>
+          </p>
+              </div>
+ 
 
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
+ <!-- <h1 class="m-5 text-center">HTML, CSS, and JavaScript Projects</h1>
+    <div class="container d-block">
+      <div class="row d-flex flex-wrap">
+        <div class="col-sm-4 d-flex">
           <img
             src="src/haiku poem generator picture.png"
-            alt="haiku poem
-          generator"
-            class="img-fluid rounded"
+            class="img-fluid p-2 shadow rounded"
           />
         </div>
-
-        <div class="col-md-6">
-          <h2 class="mt-5">Haiku Generator</h2>
-
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="mt-5">
-            <a
-              href="https://quiet-toffee-e1eb9d.netlify.app/"
-              class="primary-link"
-            >
-              Launch Poem Generator</a
-            >
-          </div>
-        </div>
-      </div>
-
-      <div class="row mt-5">
-        <div class="col-md-6">
-          <h2 class="mb-3">Weather App</h2>
-
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="mb-5 mt-5">
-            <a
-              href="https://coding-project-weather-app.netlify.app/"
-              class="primary-link"
-              >Launch Weather App</a
-            >
-          </div>
-        </div>
-        <div class="col-md-6">
+        <div class="col-sm-4 d-flex">
           <img
             src="src/weather app picture.png"
-            alt="weather app project"
-            class="img-fluid rounded"
+            class="img-fluid p-2 shadow rounded"
           />
         </div>
-      </div>
-      <div class="row mt-5">
-        <div class="col-md-6">
+        <div class="col-sm-4 d-flex">
           <img
             src="src/world clock project picture.png"
-            alt="world clock project"
-            class="img-fluid rounded"
+            class="img-fluid p-2 shadow rounded"
           />
         </div>
-
-        <div class="col-md-6">
-          <h2>World Clock</h2>
-
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-
-          <div class="mt-5">
-            <a
-              href="https://ors-world-clock-proj.netlify.app/"
-              class="primary-link"
-              >Launch Clock App</a
-            >
-          </div>
-        </div>
       </div>
-    </div>
-    <!-- <nav class="navbar navbar-expand-lg" style="background-color: #e0be9a">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Olivia Swann</a>
-        <button
-          class="navbar-toggler"
-          type="button" 
-          style="width: 10%; height: 10%;"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="services.html"
-                >Services</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-              <li class="nav-item">
-              <a class="nav-link" href="portfolio.html">Portfolio</a>
-            </li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <div class="profile-container">
-      <div class="row align-items-center">
-         <div class="col-md-4 text-center mb-4 mb-md-0"><img src="src/olivia-swann.jpg" class="headshot img-fluid" alt="olivia-swann" /></div>
-
-          <div class="col-md-8 text-center text-md-start"><h1 class="name ">Olivia Swann</h1>
-         <p>
-            With comprehensive experience in SEO, copywriting, editing, content
-            strategy, and social media management, I help businesses grow their
-            online presence and drive organic traffic.
-            <br />
-            <br />
-            My skill set spans keyword research, on-page optimization, and
-            crafting compelling, conversion-focused content that ranks well on
-            search engines.
-            <br />
-            <br />
-            Whether managing digital campaigns or refining brand messaging, I
-            focus on strategies that increase visibility and engagement across
-            multiple platforms.
-          </p>
-          
-        </div>
-
-        <span class="buttons">
-          <span>
-            <button class="portfolio-button">
-              <a href="portfolio.html" class="portfolio-button-text"
-                >Portfolio</a
-              >
-            </button>
-          </span>
-          <span>
-            <button class="services-button">
-              <a href="services.html" class="services-button-text">Services</a>
-            </button>
-          </span>
-          <span>
-            <button class="contact-button">
-              <a href="contact.html" class="contact-button-text">Contact</a>
-            </button>
-          </span>
-        </span></div>
-      </div> -->
+    </div> -->
+  
    
     </div>
   </body>
