--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Front-end developer, SEO, and digital marketing specialist. View full portfolio and range of services.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -43,18 +44,19 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a class="nav-link active" aria-current="page" href="index.html" title="homepage"
                 >Home</a
               >
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="services.html#contact">Contact</a>
-            </li>
+           
             <li class="nav-item">
               <a class="nav-link" href="portfolio.html">Porfolio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="services.html">Services</a>
+            </li>
+             <li class="nav-item">
+              <a class="nav-link" href="services.html#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -63,7 +65,8 @@
 
   
     <h1 class="text-center">Olivia Swann</h1>
-    <h2 class="text-center">
+              <h2 class=" text-center">Front-end developer, digital marketing and SEO specialist</h2>
+
       
     </h3>
     <div class="container">
@@ -71,13 +74,12 @@
         <div class="col-sm-6">
           <img
             src="src/olivia-swann.jpg"
-            alt="headshot"
-            class="img-fluid rounded headshot"
+            alt="olivia swann headshot"
+            class="headshot"
           />
         </div>
 
         <div class="col-md-6">
-          <h2 class=" text-center">Front-end developer, digital marketing and SEO specialist</h2>
 
        <p >
             With comprehensive experience in SEO, copywriting, editing, content
@@ -94,8 +96,8 @@
             focus on strategies that increase visibility and engagement across
             multiple platforms.
                <div class="navigation-links mb-5">
-      <a href="services.html#contact" class="primary-link">Contact me</a>
-      <a href="portfolio.html" class="secondary-link">Portfolio</a>
+      <a href="services.html#contact" class="primary-link" title="contact">Contact me</a>
+      <a href="portfolio.html" class="secondary-link" title="portfolio">Portfolio</a>
     </div>
           </p>
               </div>
