--- a/services.html
+++ b/services.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Services</title>
+    <meta name="description" content="Front-end developer, SEO, and digital marketing services. Contact for current rates and availability.">
+    <title>Olivia Swann | Digital Marketing and SEO Services</title>
     <link rel="stylesheet" href="style.css" />
         <link
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
@@ -36,34 +37,36 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+  <div
+          class="collapse navbar-collapse justify-content-center"
+          id="navbarNav"
+        >          <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html"
                 >Home</a
               >
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="services.html#contact">Contact</a>
-            </li>
-            <li class="nav-item">
+             <li class="nav-item">
               <a class="nav-link" href="portfolio.html">Porfolio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="services.html">Services</a>
             </li>
+             <li class="nav-item">
+              <a class="nav-link" href="services.html#contact">Contact</a>
+            </li>
           </ul>
         </div>
       </div>
     </nav>
-    <h1>Services</h1>
+    <h1 class="mt-5 pt-5 text-center">Services</h1>
 
     <p>
       I offer a range of digital services designed to elevate your online
       presence and help your business grow. With expertise in SEO and content
       strategy, I provide tailored solutions to meet your unique needs.
     </p>
-    <h2>SEO Services</h2>
+    <h2 class="pt-5 text-center">SEO Services</h2>
 
     <p>
       I specialize in comprehensive SEO audits that uncover opportunities to
@@ -78,7 +81,7 @@
       <li>Competitor analysis</li>
       <li>On-page SEO improvements</li>
     </ul>
-    <h2>Content Creation</h2>
+    <h2 class="pt-5 text-center">Content Creation</h2>
     <p>
       From blog posts to website copy, I create content that resonates with your
       target audience and aligns with your brand's voice. My content creation
@@ -92,7 +95,7 @@
       <li>Editing and proofreading</li>
     </ul>
 
-    <h2>Social Media Management</h2>
+    <h2 class="pt-5 text-center">Social Media Management</h2>
     <p>
       Social media is a powerful tool for growing your brand and building
       customer relationships. I can help manage your social channels, create
@@ -106,7 +109,7 @@
       <li>Preformance tracking & reporting</li>
     </ul>
 <div id="contact">
-     <h2>Contact</h2>
+     <h2 class="pt-5 text-center">Contact</h2>
       <p>
      Feel free to reach out for pricing information. I offer free SEO and social media audits and customized packages designed to
         meet your specific requirements and budget. I look forward to hearing
