--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     />
 
     <title>Olivia Swann | Digital Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
@@ -25,6 +25,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav
@@ -69,7 +70,7 @@
     </nav>
     <!-- Portfolio -->
 
-    <h1 class="mt-5 pt-5 text-center">Porfolio</h1>
+    <h1>Portfolio</h1>
     <!-- TOC -->
     <div class="toc d-block text-center pb-5">
       <a href="portfolio.html#blogs"
