Added heros, cleaned code, updated copy

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,16 +69,16 @@
       </div>
     </nav>
     <!-- Portfolio -->
-
-    <h1>Portfolio</h1>
-    <!-- TOC -->
-    <div class="toc d-block text-center pb-5">
-      <a href="portfolio.html#blogs"
-        >Jump to ad copy, copywriting, social media copy, and blogs</a
-      >
+    <div class="hero">
+      <h1>Portfolio</h1>
     </div>
+    <!-- Button to Copywriting section -->
+    <div class="d-block text-center pb-5">
+      <a href="portfolio.html#blogs" class="tertiary-link">Writing samples</a>
+    </div>
+    <!-- Front-end projects -->
 
-    <h2 id="front end projects" class="text-center pb-3">Front End Projects</h2>
+    <h2 id="front end projects">Front End Projects</h2>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -91,19 +91,28 @@
         </div>
 
         <div class="col-md-6">
-          <h2 class="mt-5">Haiku Generator</h2>
+          <h3 class="mt-5">Haiku Generator</h3>
 
           <p>
-            Poem generator app using AI API, Javascript, HTML, and CSS to
-            generate a poem based on user input.
+            An interactive application built with
+            <strong>JavaScript, HTML, CSS</strong>, and an AI API to generate
+            personalized poems based on user input. This project highlights
+            skills in integrating APIs, creating dynamic user experiences, and
+            designing responsive web applications.
           </p>
-          <div class="mt-5">
+          <div class="mt-5 text-center">
             <a
-              href="https://quiet-toffee-e1eb9d.netlify.app/"
+              href="https://github.com/xorsx/poem-generator"
               class="primary-link"
               title="haiku project"
             >
-              Launch Poem Generator</a
+              Launch App</a
+            >
+            <a
+              href="https://github.com/xorsx/world-clock-project"
+              class="tertiary-link m-5"
+              title="haiku generator"
+              >Github</a
             >
           </div>
         </div>
@@ -111,65 +120,86 @@
 
       <div class="row mt-5">
         <div class="col-md-6">
-          <h2 class="mb-3">Weather App</h2>
-
-          <p>
-            Weather app developed using weather API, JavaScript, HTML, and CSS.
-          </p>
-          <div class="mb-5 mt-5">
-            <a
-              href="https://coding-project-weather-app.netlify.app/"
-              class="primary-link"
-              title="weather app project"
-              >Launch Weather App</a
-            >
-          </div>
-        </div>
-        <div class="col-md-6">
           <img
             src="src/weather app picture.png"
             alt="weather app project"
+            target="_blank"
             class="img-fluid rounded"
           />
+        </div>
+
+        <div class="col-md-6">
+          <h3 class="mt-5">Weather App</h3>
+          <p>
+            A dynamic application built with
+            <strong>JavaScript, HTML, CSS, and a weather API</strong> to provide
+            real-time weather updates. Users can view current conditions and
+            forecasts for their selected locations. This project demonstrates
+            proficiency in API integration, responsive design, and creating
+            interactive user interfaces.
+          </p>
+          <div class="mt-5 text-center">
+            <a
+              href="https://coding-project-weather-app.netlify.app/"
+              target="_blank"
+              class="primary-link"
+              title="weather app project"
+              >Launch App</a
+            >
+            <a
+              href="https://github.com/xorsx/weather-app-project"
+              class="tertiary-link m-5"
+              target="_blank"
+              title="weather app"
+              >Github</a
+            >
+          </div>
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-md-6">
           <img
             src="src/world clock project picture.png"
+            target="_blank"
             alt="world clock project"
             class="img-fluid rounded"
           />
         </div>
 
         <div class="col-md-6">
-          <h2>World Clock</h2>
+          <h3>World Clock</h3>
 
-          <p>World clock app developed using HTML, CSS, and JavaScript.</p>
+          <p>
+            A responsive application built with
+            <strong>HTML, CSS, and JavaScript</strong> that displays the current
+            time for multiple time zones. It features a dynamic real-time clock,
+            a city or time zone selector, and a clean, user-friendly design
+            optimized for desktop and mobile. This project showcases skills in
+            creating functional and interactive web applications.
+          </p>
 
-          <div class="mt-5">
+          <div class="mt-5 text-center">
             <a
               href="https://ors-world-clock-proj.netlify.app/"
               class="primary-link"
               title="clock project"
-              >Launch Clock App</a
+              >Launch App</a
+            >
+            <a
+              href="https://github.com/xorsx/world-clock-project"
+              class="tertiary-link m-5"
+              title="clock project"
+              >Github</a
             >
           </div>
         </div>
       </div>
     </div>
-    <div class="navigation-links mb-5">
-      <a href="https://github.com/xorsx" class="primary-link" title="github"
-        >Github</a
-      >
-      <a href="services.html" class="secondary-link" title="services"
-        >Services</a
-      >
-    </div>
-    <!-- Copywriting and Blogs Porfolio -->
 
-    <h2 class="text-center m-5 pt-3" id="blogs">Blogs</h2>
-    <div class="container d-block">
+    <!-- Blogs -->
+
+    <h2 id="blogs">Blogs</h2>
+    <div class="container d-block primary-link">
       <div class="row d-flex flex-wrap">
         <div class="col-sm-4 d-flex">
           <a
@@ -207,6 +237,6 @@
         </div>
       </div>
     </div>
-    <div class="navigation-links mb-5 blog-links"></div>
+    <h2 id="social-media">Social media copy</h2>
   </body>
 </html>
