--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Front-end developer, SEO, and digital marketing services. Contact for current rates and availability.">
     <title>Olivia Swann | Digital Marketing and SEO Services</title>
-    <link rel="stylesheet" href="style.css" />
+    
         <link
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
@@ -21,6 +21,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
        <nav class="navbar navbar-expand-lg fixed-top" style="background-color: #e0be9a;">
@@ -59,14 +60,12 @@
         </div>
       </div>
     </nav>
-    <h1 class="mt-5 pt-5 text-center">Services</h1>
+    <div class="hero">
+    <h1>Services</h1>
+    </div>
 
-    <p>
-      I offer a range of digital services designed to elevate your online
-      presence and help your business grow. With expertise in SEO and content
-      strategy, I provide tailored solutions to meet your unique needs.
-    </p>
-    <h2 class="pt-5 text-center">SEO Services</h2>
+
+    <h2 class="pt-5 text-center">SEO</h2>
 
     <p>
       I specialize in comprehensive SEO audits that uncover opportunities to
